# K-clock

./: index.html  package-lock.json  package.json
.github/workflows/: build-windows.yml
docs/: index.html
src-tauri/: .gitignore  Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
update/: latest.json
